[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/DefaultWorld/Weapons/Lyre/Lyre.gd" type="Script" id=2]
[ext_resource path="res://Scenes/DefaultWorld/Weapons/Lyre/lyre.png" type="Texture" id=3]
[ext_resource path="res://Scenes/DefaultWorld/Weapons/Lyre/lyre5.ogg" type="AudioStream" id=4]
[ext_resource path="res://Scenes/DefaultWorld/Weapons/Lyre/lyre1.ogg" type="AudioStream" id=5]
[ext_resource path="res://Scenes/DefaultWorld/Weapons/Lyre/lyre2.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "INIT"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 17 ), Vector2( 0, -14.4375 ) ]
}

[node name="Lyre" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 13.4471 )
texture = ExtResource( 3 )

[node name="Sounds" type="Node" parent="."]

[node name="BlueNoteSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 2.0

[node name="GreenNoteSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )
volume_db = -10.0
pitch_scale = 2.0

[node name="RedNoteSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/INIT = SubResource( 1 )
anims/Idle = SubResource( 2 )
